--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: MS Computer Science
+  uni: Carnegie Mellon University
+  year: May, 2014 &mdash; May, 2015
   # awards:
   # summary:
